fix(start-cli):add  add-opens script